--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Nursing -- Juvenile fiction'
 - !lcsh 'Red Cross and Red Crescent -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Red Cross Girls with Pershing to Victory
 url: http://www.gutenberg.org/ebooks/33990
